--- a/.env_example
+++ b/.env_example
@@ -1,1 +1,3 @@
-GEMENI_KEY=AAAAAA-XXXXXTXXXX
+# Gemini API Configuration
+# Get your API key from: https://makersuite.google.com/app/apikey
+GEMINI_API_KEY=your_api_key_here
