--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,31 @@
+# Environment variables
 .env
+.env.local
+
+# Node modules
+node_modules/
+
+# Build outputs
+dist/
+build/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+npm-debug.log*
+
+# Temporary files
+*.tmp
+.cache/
+
+# Config files (if containing secrets)
+config.local.js
