--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,12 @@
 .env
 .env.local
 
+# Firebase
+.firebase/
+firebase-debug.log
+firestore-debug.log
+ui-debug.log
+
 # Node modules
 node_modules/
 
