feat: restructure project v1.0.0 with PARA docs and leaderboard OG image
Major project restructure implementing PARA method for documentation
organization, centralized version management, and dynamic OG image generation.

## Project Structure (PARA Method)
- Organized docs/ into Projects/Areas/Resources/Archives
- Moved source files to src/js/, src/css/, src/assets/
- Moved tests to tests/ directory
- Created PROJECT_STRUCTURE.md guide

## Version Management
- Created src/js/version.js as single source of truth
- Version 1.0.0 synced across UI, share cards, package.json
- Dynamic version display in all components

## Leaderboard OG Image Generator
- New LeaderboardCardGenerator class for dynamic social previews
- Displays top 5 players and game statistics
- DOS aesthetic with ASCII progress bars
- Firebase integration with mock data fallback
- Web-based generation tool (generate-og-image.html)
- Node.js script for automated generation
- 20 unit tests (all passing)

## Share Card Improvements
- Fixed generateASCIIBar edge cases (negative, NaN, overflow)
- Enhanced DOS aesthetic with box drawing characters
- Improved typography and layout
- 23 unit tests (all passing)

## Files Organized
- 13 JS files → src/js/
- 2 CSS files → src/css/
- Assets → src/assets/
- 27 docs organized in PARA structure
- Tests → tests/

## Testing
- Share card tests: 23/23 passing ✅
- Leaderboard tests: 20/20 passing ✅
- Total: 43/43 passing ✅

## Documentation
- Complete PARA structure with README
- Leaderboard OG image documentation
- Restructure summary and migration guide
- Updated .gitignore for new structure

Co-authored-by: Ona <no-reply@ona.com>

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ ui-debug.log
 
 # Node modules
 node_modules/
+package-lock.json
 
 # Build outputs
 dist/
@@ -32,6 +33,20 @@ npm-debug.log*
 # Temporary files
 *.tmp
 .cache/
+*.bak
+
+# Test outputs
+coverage/
+.nyc_output/
 
 # Config files (if containing secrets)
 config.local.js
+src/js/config.local.js
+
+# Assets (temporary/generated)
+src/assets/*.tmp
+src/assets/temp/
+
+# Documentation drafts
+docs/**/*.draft.md
+docs/**/*.wip.md
