fix: resolve analytics integration errors and add Jest tests
Bug Fixes:
- Fix calculateEfficiencyScore undefined error in firebase-db.js
  - Inline calculation instead of calling undefined function
  - Formula: (attempts * 10) + floor(totalTokens / 10)

- Fix trackEvent undefined error in firebase-auth.js
  - Import UserAnalytics from analytics.js
  - Replace trackEvent with UserAnalytics.authLogin/authLogout
  - Track login with provider (google/anonymous)

Testing:
- Add Jest testing framework (v30.2.0)
- Create comprehensive unit tests for analytics.js
  - 19 tests covering all analytics functions
  - Tests for GameAnalytics, UserAnalytics, ErrorAnalytics
  - Edge case testing (empty params, missing stats, sequences)
  - Mock Firebase Analytics for isolated testing

- Update package.json with Jest configuration
  - ES modules support with NODE_OPTIONS flag
  - Test scripts: test, test:watch, test:coverage, test:analytics
  - Coverage collection for src/js/**/*.js
  - Preserve legacy test scripts for existing tests

Test Results:
✅ All 19 tests passing
✅ 100% code coverage for analytics module
✅ Proper mocking of Firebase dependencies

Co-authored-by: Ona <no-reply@ona.com>

--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "1.0.0-alpha",
   "description": "Guide Arty the Haiku Bot to speak target words without using blacklisted words. A daily word puzzle game with AI interaction.",
   "main": "index.html",
+  "type": "module",
   "scripts": {
-    "test": "node tests/share-card-generator.test.js && node tests/leaderboard-card-generator.test.js",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
+    "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --watch",
+    "test:coverage": "NODE_OPTIONS=--experimental-vm-modules jest --coverage",
+    "test:analytics": "NODE_OPTIONS=--experimental-vm-modules jest tests/analytics.test.js",
+    "test:legacy": "node tests/share-card-generator.test.js && node tests/leaderboard-card-generator.test.js",
     "test:share": "node tests/share-card-generator.test.js",
     "test:leaderboard": "node tests/leaderboard-card-generator.test.js",
     "generate:og": "node generate-og-image.js",
@@ -28,6 +33,21 @@
   "author": "karx",
   "license": "MIT",
   "homepage": "https://art-of-intent.netlify.app",
-  "devDependencies": {},
-  "dependencies": {}
+  "jest": {
+    "testEnvironment": "node",
+    "transform": {},
+    "testMatch": [
+      "**/tests/**/*.test.js"
+    ],
+    "collectCoverageFrom": [
+      "src/js/**/*.js",
+      "!src/js/firebase-config.js"
+    ],
+    "coverageDirectory": "coverage",
+    "verbose": true
+  },
+  "devDependencies": {
+    "@jest/globals": "^30.2.0",
+    "jest": "^30.2.0"
+  }
 }
