fix: deploy Firestore rules to alpha database and fix permissions
- Updated firebase.json to specify alpha database
- Modified Firestore rules to handle legacy sessions without userId
- Fixed error handler scope issue in firebase-db.js
- Added google-auth-library for rules deployment
- Updated .gitignore to exclude Firebase admin SDK credentials

Co-authored-by: Ona <no-reply@ona.com>

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,5 @@ src/assets/temp/
 # Documentation drafts
 docs/**/*.draft.md
 docs/**/*.wip.md
+
+art-of-intent-firebase-adminsdk-1whdc-d407629ecd.json
