--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,8 @@
 {
   "firestore": {
     "rules": "firestore.rules",
-    "indexes": "firestore.indexes.json"
+    "indexes": "firestore.indexes.json",
+    "database": "alpha"
   },
   "hosting": {
     "public": ".",
