--- a/package.json
+++ b/package.json
@@ -49,5 +49,8 @@
   "devDependencies": {
     "@jest/globals": "^30.2.0",
     "jest": "^30.2.0"
+  },
+  "dependencies": {
+    "google-auth-library": "^10.4.2"
   }
 }
