feat: migrate LLM calls to Firebase Cloud Functions
Move Gemini API calls to backend for security and centralization:

**Firebase Functions:**
- artyGenerateHaiku: Callable function for haiku generation
- generateDailyWords: Scheduled function (daily at 00:00 UTC)

**Security Improvements:**
- API keys no longer exposed to client
- Rate limiting enforced server-side
- Input validation on backend
- Authentication required for all calls

**Client Changes:**
- game.js: Use Firebase callable function instead of direct API
- loadDailyWords(): Load words from Firestore with fallback
- Async initialization for word loading

**Infrastructure:**
- functions/: New directory with Cloud Functions code
- firebase.json: Added functions configuration
- firestore.rules: Added dailyWords collection rules
- test-functions.html: Test page for function verification

**Documentation:**
- FIREBASE_FUNCTIONS_ARCHITECTURE.md: Detailed architecture
- FIREBASE_FUNCTIONS_DEPLOYMENT.md: Deployment guide
- functions/README.md: Functions documentation

Benefits:
- Secure API key management
- Consistent daily words across all users
- Centralized word generation
- Auto-scaling with Cloud Functions
- Easy monitoring and logging

Co-authored-by: Ona <no-reply@ona.com>

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 firebase-debug.log
 firestore-debug.log
 ui-debug.log
+functions/.env
+functions/node_modules/
+functions/package-lock.json
 
 # Node modules
 node_modules/
