--- a/firebase.json
+++ b/firebase.json
@@ -1,4 +1,9 @@
 {
+  "functions": {
+    "source": "functions",
+    "runtime": "nodejs20",
+    "codebase": "default"
+  },
   "firestore": {
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json",
@@ -12,6 +17,7 @@
       "**/node_modules/**",
       "tests/**",
       "docs/**",
+      "functions/**",
       "*.md"
     ],
     "rewrites": [
