docs: add deployment guides and test scripts
- DEPLOYMENT_STATUS.md: Current deployment status and test results
- DEPLOY_INSTRUCTIONS.md: Step-by-step deployment guide
- MIGRATION_SUMMARY.md: Complete migration summary
- .firebaserc: Firebase project configuration
- functions/test-local.js: Local testing script
- functions/package.json: Added dotenv and firebase-functions-test

Test Results:
- ✅ Gemini API working (tested locally)
- ✅ Word generation logic working
- ⏳ Awaiting Firebase deployment with proper authentication

Next Steps:
1. Authenticate Firebase CLI on local machine
2. Deploy functions: firebase deploy --only functions
3. Test in production
4. Remove client-side API key

Co-authored-by: Ona <no-reply@ona.com>

--- a/functions/package.json
+++ b/functions/package.json
@@ -14,11 +14,20 @@
   "engines": {
     "node": "20"
   },
-  "keywords": ["firebase", "functions", "gemini", "ai"],
+  "keywords": [
+    "firebase",
+    "functions",
+    "gemini",
+    "ai"
+  ],
   "author": "karx",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "firebase-admin": "^13.5.0",
     "firebase-functions": "^6.6.0"
+  },
+  "devDependencies": {
+    "firebase-functions-test": "^3.4.1"
   }
 }
